Update DropBlog “2018-07-29-test”

--- a/src/posts/drop-blog/2018-07-29-test.md
+++ b/src/posts/drop-blog/2018-07-29-test.md
@@ -1,30 +1,18 @@
 ---
-title: My first post
+title: DROP spirit will return
+postCardImage: /uploads/drop-skull.jpg
 date: '2018-07-29'
-postCardImage: /uploads/admirals.jpg
 category: Ideas
-tags:
-  - own
 author: Zoohr
 authorImage: uploads/drop-logo1.png
 type: post
 ---
-# What is Lorem Ipsum?
+## I dont have the time to write it now. I'll finish it later.
 
-## Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsu
+You get the idea, no alliances anymore, kill everything that isn't DRP.
 
-m passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+We dont need a war to that.. Just announce in general chat that we cancel all alliances and NAPs. So they can get ready.
 
-# What is Lorem Ipsum?
+I think in 2 days time once kraken is over .
 
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-![this is my best ship](/uploads/ship.jpg)
-
-What is Lorem Ipsum?
-
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-
-What is Lorem Ipsum?
-
-Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+Zoohr out.
