Update DropBlog “2018-07-29-test”

--- a/src/posts/drop-blog/2018-07-29-test.md
+++ b/src/posts/drop-blog/2018-07-29-test.md
@@ -7,7 +7,7 @@ author: Zoohr
 authorImage: uploads/drop-logo1.png
 type: post
 ---
-## I dont have the time to write it now. I'll finish it later.
+## I dont have the time to write it now. I'll finish it later...
 
 You get the idea, no alliances anymore, kill everything that isn't DRP.
 
