added categories toolbar, bottom menu for mobile

--- a/src/posts/drop-blog/2018-07-29-test.md
+++ b/src/posts/drop-blog/2018-07-29-test.md
@@ -16,3 +16,19 @@ We dont need a war to that.. Just announce in general chat that we cancel all al
 I think in 2 days time once kraken is over .
 
 Zoohr out.
+
+You get the idea, no alliances anymore, kill everything that isn't DRP.
+
+We dont need a war to that.. Just announce in general chat that we cancel all alliances and NAPs. So they can get ready.
+
+I think in 2 days time once kraken is over .
+
+Zoohr out.
+
+You get the idea, no alliances anymore, kill everything that isn't DRP.
+
+We dont need a war to that.. Just announce in general chat that we cancel all alliances and NAPs. So they can get ready.
+
+I think in 2 days time once kraken is over .
+
+Zoohr out.
